@@ -1,3 +1,7 @@
+Mon Jun  9 20:52:52  2008  Steve Huston  <shuston@riverace.com>
+
+        * ace/Asynch_IO.h: Doxygen improvements.
+
 Mon Jun  9 19:40:56 UTC 2008  Yan Dai  <dai_y@ociweb.com>
 
         * ace/Stack_Trace.h:
